<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:paddingTop="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/shang" />
    </RelativeLayout>


        <com.example.lenovo.myapplication.utils.RoundImageView
            android:layout_marginTop="50dp"
            android:id="@+id/Buiness_top"
            android:src="@drawable/morentouxiang"
            android:layout_width="100dp"
            android:layout_height="100dp">
        </com.example.lenovo.myapplication.utils.RoundImageView>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="40dp">

            <EditText
                android:minHeight="50dp"
                android:textColor="#3B3C3F"
                android:textColorHint="#B26B7B94"
                android:id="@+id/Buiness_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/buiness_name"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/Buiness_name"
                android:background="#EBEDF1" />

            <EditText
                android:minHeight="50dp"
                android:inputType="textPassword"
                android:textColor="#3B3C3F"
                android:textColorHint="#B26B7B94"
                android:id="@+id/Buiness_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Buiness_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/buiness_code"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/Buiness_password"
                android:background="#EBEDF1" />

            <Button
                android:id="@+id/Buiness_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Buiness_password"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_gray"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/Buiness_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Buiness_login"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:text="@string/new_registered"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/back_user_login"
                android:textColor="#3b3c3f"
                android:textSize="15dp"
                android:text="返回用户登陆 >"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
