<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <ImageView
            android:id="@+id/Goods_content_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/return_business_index"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/greturn" />
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/Goods_content_name"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="通灵鬼校"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="10dp"
                android:textSize="15dp"
                android:textColor="@android:color/black"
                android:text="@string/collet"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/Goods_content_collect_num"
                android:padding="10dp"
                android:textSize="15dp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="15"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/Goods_content_info"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:textSize="15dp"
            android:text="通灵鬼校"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="30dp"
            android:id="@+id/Goods_content_type"
            android:text="hahaha"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dp50"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center|bottom"
            android:textSize="20dp"
            android:text="@string/delete_goods"
            android:background="@drawable/shape"
            android:id="@+id/delete_goods"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center|bottom"
            android:textSize="20dp"
            android:text="@string/update_goods"
            android:background="@drawable/shape"
            android:id="@+id/update_goods"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
